--- a/hr-mcp-server/hr-mcp-server.csproj
+++ b/hr-mcp-server/hr-mcp-server.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
@@ -7,13 +7,13 @@
     <UserSecretsId>b99a443b-46c6-4f7f-a569-75a76c56e3e2</UserSecretsId>
   </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="ModelContextProtocol" Version="0.4.0-preview.1" />
-        <PackageReference Include="ModelContextProtocol.AspNetCore" Version="0.4.0-preview.1" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.7" />
-         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.7">
+        <PackageReference Include="ModelContextProtocol" Version="0.4.0-preview.3" />
+        <PackageReference Include="ModelContextProtocol.AspNetCore" Version="0.4.0-preview.3" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
+         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.10">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.7" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.10" />
     </ItemGroup>
 </Project>
