Remove unused files and update configurations for purchasing service
- Deleted hr-mcp.yaml as it is no longer needed.
- Updated deploy-apis.azcli to include connection string for purchasing database and modified web app deployment commands.
- Removed CloudEvent.cs, EventGridPublisher.cs, FoodEventData.cs, FoodEventType.cs, and Delivery.cs as they are no longer in use.
- Refactored Program.cs to clean up unused namespaces and updated CORS policy name.
- Added connection strings for the purchasing database in appsettings.Development.json and appsettings.json.
- Updated inspector.config.json to reflect the new URL for the purchasing MCP service hosted on Azure.

--- a/purchasing-service/appsettings.Development.json
+++ b/purchasing-service/appsettings.Development.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultDatabase": "Data Source=integrationsonline.westeurope.cloudapp.azure.com;Initial Catalog=PurchasingDB;Persist Security Info=True;User ID=<UserID>;Password='';TrustServerCertificate=true"
+  },
   "OfferRandomizer": {
     "TransportationCost": 30.00,
     "Pricing": {
