--- a/purchasing-service/appsettings.json
+++ b/purchasing-service/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultDatabase": "Data Source=integrationsonline.westeurope.cloudapp.azure.com;Initial Catalog=PurchasingDB;Persist Security Info=True;User ID=<UserID>;Password='';TrustServerCertificate=true"
+  },
   "OfferRandomizer": {
     "TransportationCost": 30.00,
     "Pricing": {
