Refactor configuration files and remove deprecated migration document
- Updated FoodConfig.cs to remove unused properties: KeyVault, EventGridKey, EventGridEP, and FeatureManagement class.
- Modified appsettings.Development.json in food-catalog-api to set the User ID and Password for the DefaultDatabase connection string.
- Updated appsettings.Development.json in purchasing-service to set the User ID and Password for the DefaultDatabase connection string.
- Deleted MIGRATION.md as it is no longer relevant following the migration to Microsoft.Extensions.AI.

--- a/food-catalog-api/appsettings.Development.json
+++ b/food-catalog-api/appsettings.Development.json
@@ -13,7 +13,7 @@
         "ConnectionString": "<ConnectionString>"
     },
     "ConnectionStrings": {
-        "DefaultDatabase": "Data Source=localhost;Initial Catalog=FoodCatalogDB;Persist Security Info=True;User ID=<UserID>;Password='';TrustServerCertificate=true"
+        "DefaultDatabase": "Data Source=localhost;Initial Catalog=FoodCatalogDB;Persist Security Info=True;User ID=devuser;Password='devuser';TrustServerCertificate=true"
     },
     "App": {
         "Title": "",
