--- a/purchasing-mcp/.azure/config
+++ b/purchasing-mcp/.azure/config
@@ -3,5 +3,5 @@ group = agentic-process-dev
 sku = F1
 appserviceplan = process-purchasing-plan-dev
 location = westeurope
-web = purchasing-service-dev
+web = purchasing-mcp-dev
 
