feat: Enhance food catalog API configuration and storage setup
- Added ImgBaseUrl property to FoodConfig for dynamic image URL handling.
- Updated FoodDBContext to utilize ImgBaseUrl for food item picture URLs.
- Modified appsettings.Development.json and appsettings.json to include ImgBaseUrl configuration.
- Enabled public access for storage account and container to facilitate image retrieval.

--- a/food-catalog-api/appsettings.Development.json
+++ b/food-catalog-api/appsettings.Development.json
@@ -4,10 +4,6 @@
         "ClientId": "<ClientId>",
         "Instance": "https://login.microsoftonline.com/",
         "cacheLocation": "localStorage",
-        "AppConfigurationCS": "<AppConfigurationCS>",
-        "KeyVault": "https://deployment-vault-11246.vault.azure.net/",
-        "EventGridKey": "<EventGridKey>",
-        "EventGridEP": "<EventGridEP>"
     },
     "ApplicationInsights": {
         "ConnectionString": "<ConnectionString>"
@@ -16,14 +12,9 @@
         "DefaultDatabase": "Data Source=localhost;Initial Catalog=FoodCatalogDB;Persist Security Info=True;User ID=devuser;Password='devuser';TrustServerCertificate=true"
     },
     "App": {
-        "Title": "",
-        "AuthEnabled": false
-    },
-    "FeatureManagement": {
-        "PublishEvents": false,
-        "UseKeyVaultWithMI": false,
-        "UseHealthChecks": false,
-        "UseApplicationInsights": false
+        "Title": "Food Api - Development",
+        "AuthEnabled": false,
+        "ImgBaseUrl": "https://agenticprocessdev.blob.core.windows.net/food/"
     },
     "Logging": {
         "LogLevel": {
