--- a/food-catalog-api/appsettings.json
+++ b/food-catalog-api/appsettings.json
@@ -3,27 +3,18 @@
         "TenantId": "d92b247e-90e0-4469-a129-6a32866c0d0a",
         "ClientId": "b509d389-361a-447b-afb2-97cc8131dad6",
         "Instance": "https://login.microsoftonline.com/",
-        "cacheLocation": "localStorage",
-        "AppConfigurationCS": "InstrumentationKey=7e9e5dc9-5621-44fb-9bd6-ce7db2a37a13;IngestionEndpoint=https://westeurope-5.in.applicationinsights.azure.com/;LiveEndpoint=https://westeurope.livediagnostics.monitor.azure.com/",
-        "KeyVault": "https://deployment-vault-11246.vault.azure.net/",
-        "EventGridKey": "<EventGridKey>",
-        "EventGridEP": "<EventGridEP>"
+        "cacheLocation": "localStorage"
     },
     "ApplicationInsights": {
-        "ConnectionString": "InstrumentationKey=0a945124-73ac-4295-98b0-5116df276b7d;IngestionEndpoint=https://westeurope-5.in.applicationinsights.azure.com/;LiveEndpoint=https://westeurope.livediagnostics.monitor.azure.com/"
+        "ConnectionString": "<ConnectionString>"
     },
     "ConnectionStrings": {
         "DefaultDatabase": "Data Source=integrationsonline.westeurope.cloudapp.azure.com;Initial Catalog=FoodCatalogDB;Persist Security Info=True;User ID=<UserID>;Password='';TrustServerCertificate=true"
     },
     "App": {
-        "Title": "",
-        "AuthEnabled": false
-    },
-    "FeatureManagement": {
-        "PublishEvents": false,
-        "UseKeyVaultWithMI": false,
-        "UseHealthChecks": false,
-        "UseApplicationInsights": false
+        "Title": "Food Api",
+        "AuthEnabled": false,
+        "ImgBaseUrl": "https://agenticprocessdev.blob.core.windows.net/food/"
     },
     "Logging": {
         "LogLevel": {
