feat: Update food catalog API and deployment configurations
- Modified deployment script to allow public access for storage containers.
- Refactored AILogger class by removing unnecessary newline.
- Updated FoodTelemetryInitializer to change role name to "Food Api".
- Cleaned up FoodController by removing commented-out URLs for clarity.
- Removed 'Code' property from FoodItem model to simplify data structure.
- Adjusted Swagger UI endpoint title to use dynamic configuration.
- Updated appsettings for development and production to reflect new service name "Food Catalog".
- Revised HTTP test file to align with updated API endpoints and added new food item example.

--- a/food-catalog-api/appsettings.Development.json
+++ b/food-catalog-api/appsettings.Development.json
@@ -3,7 +3,7 @@
         "TenantId": "<TenantId>",
         "ClientId": "<ClientId>",
         "Instance": "https://login.microsoftonline.com/",
-        "cacheLocation": "localStorage",
+        "cacheLocation": "localStorage"
     },
     "ApplicationInsights": {
         "ConnectionString": "<ConnectionString>"
@@ -12,7 +12,7 @@
         "DefaultDatabase": "Data Source=localhost;Initial Catalog=FoodCatalogDB;Persist Security Info=True;User ID=devuser;Password='devuser';TrustServerCertificate=true"
     },
     "App": {
-        "Title": "Food Api - Development",
+        "Title": "Food Catalog - Development",
         "AuthEnabled": false,
         "ImgBaseUrl": "https://agenticprocessdev.blob.core.windows.net/food/"
     },
