--- a/food-catalog-api/appsettings.json
+++ b/food-catalog-api/appsettings.json
@@ -12,7 +12,7 @@
         "DefaultDatabase": "Data Source=integrationsonline.westeurope.cloudapp.azure.com;Initial Catalog=FoodCatalogDB;Persist Security Info=True;User ID=<UserID>;Password='';TrustServerCertificate=true"
     },
     "App": {
-        "Title": "Food Api",
+        "Title": "Food Catalog",
         "AuthEnabled": false,
         "ImgBaseUrl": "https://agenticprocessdev.blob.core.windows.net/food/"
     },
