--- a/food-catalog-api/appsettings.Development.json
+++ b/food-catalog-api/appsettings.Development.json
@@ -3,11 +3,7 @@
         "TenantId": "<TenantId>",
         "ClientId": "<ClientId>",
         "Instance": "https://login.microsoftonline.com/",
-        "cacheLocation": "localStorage",
-        "AppConfigurationCS": "<AppConfigurationCS>",
-        "KeyVault": "https://deployment-vault-11246.vault.azure.net/",
-        "EventGridKey": "<EventGridKey>",
-        "EventGridEP": "<EventGridEP>"
+        "cacheLocation": "localStorage"
     },
     "ApplicationInsights": {
         "ConnectionString": "<ConnectionString>"
@@ -16,14 +12,9 @@
         "DefaultDatabase": "Data Source=localhost;Initial Catalog=FoodCatalogDB;Persist Security Info=True;User ID=devuser;Password='devuser';TrustServerCertificate=true"
     },
     "App": {
-        "Title": "",
-        "AuthEnabled": false
-    },
-    "FeatureManagement": {
-        "PublishEvents": false,
-        "UseKeyVaultWithMI": false,
-        "UseHealthChecks": false,
-        "UseApplicationInsights": false
+        "Title": "Food Catalog - Development",
+        "AuthEnabled": false,
+        "ImgBaseUrl": "https://agenticprocessdev.blob.core.windows.net/food/"
     },
     "Logging": {
         "LogLevel": {
