Refactor food item creation logic and update configuration
- Removed automatic ID assignment from food item creation in FoodController.cs to prevent potential conflicts.
- Updated connection string in appsettings.Development.json to use a local database instance.
- Commented out the base URL in test-food.http for clarity and to avoid confusion during local testing.

--- a/food-catalog-api/appsettings.Development.json
+++ b/food-catalog-api/appsettings.Development.json
@@ -9,7 +9,7 @@
         "ConnectionString": "<ConnectionString>"
     },
     "ConnectionStrings": {
-        "DefaultDatabase": "Data Source=localhost;Initial Catalog=FoodCatalogDB;Persist Security Info=True;User ID=devuser;Password='devuser';TrustServerCertificate=true"
+        "DefaultDatabase": "Data Source=.;Initial Catalog=FoodCatalogDB;Persist Security Info=True;User ID=devuser;Password='devuser';TrustServerCertificate=true"
     },
     "App": {
         "Title": "Food Catalog - Development",
