Update food items and supplier details for improved accuracy and consistency
- Modified food item entries in FoodDBContext.cs to replace outdated items with new ones, including:
  - Replaced "Butter Chicken" with "Wiener Schnitzel"
  - Replaced "Blini with Salmon" with "Germknoedel"
  - Replaced "Wiener Schnitzel" with "Kaiserschmarrn"
  - Replaced "Cevapcici" with "Sachertorte"
  - Updated "Germknödel" to "Falafel with Humus"
  - Added new food items: "Linsen mit Semmelknödel", "Weißwurst mit Brezn und süßem Senf", "Curry Wurst", "Schweinshaxe mit Knödel und Sauerkraut", "Pizza Napoli", "Arancini Napoletana", "Massaman Curry", "Green Curry", "Tom Yum Goong"

- Updated SupplierStore.cs to reflect changes in supplier contact details and available products:
  - Changed contact name and email for "Wiener Feinkost GmbH"
  - Updated available products for suppliers to include new food items
  - Changed company name and contact details for one supplier

- Renamed property "Products" to "AvailableProducts" in Suppliers.cs for clarity

- Adjusted SupplierService.cs to use the new "AvailableProducts" property

- Updated descriptions in PurchasingTools.cs for clarity on supplier retrieval and offer requests

- Changed pricing in appsettings.Development.json and appsettings.json to reflect new food items

- Updated test-controllers.http to replace "Cevapcici" with "Pizza Napoli" in test cases

--- a/purchasing-mcp/appsettings.json
+++ b/purchasing-mcp/appsettings.json
@@ -43,7 +43,7 @@
       "Wiener Schnitzel": 14.00,
       "Curry Wurst": 5.00,
       "Falafel": 4.00,
-      "Cevapcici": 9.00,
+      "Pizza Napoli": 9.00,
       "Greeke Salad": 5.00,
       "Pad Ka Prao": 5.00,
       "Spare Ribs": 12.00
