--- a/src/agents/Food Orders Buddy/settings.mcs.yml
+++ b/src/agents/Food Orders Buddy/settings.mcs.yml
@@ -1,9 +1,12 @@
 ﻿displayName: Food Orders Buddy
 schemaName: cr6f9_inventoryClerk
-accessControlPolicy: ChatbotReaders
+accessControlPolicy: Any
 authenticationMode: Integrated
 authenticationTrigger: Always
 configuration:
+  channels:
+    - channelId: MsTeams
+
   settings:
     GenerativeActionsEnabled: true
 
@@ -11,6 +14,7 @@ configuration:
   gPTSettings:
     defaultSchemaName: cr6f9_inventoryClerk.gpt.default
 
+  isLightweightBot: false
   aISettings:
     useModelKnowledge: true
     isFileAnalysisEnabled: false
@@ -21,6 +25,6 @@ configuration:
   recognizer:
     kind: GenerativeAIRecognizer
 
-publishedOn: 2025-10-24T10:55:47.0000000Z
+publishedOn: 2025-10-24T19:10:06.0000000Z
 template: default-2.1.0
 language: 1033
