--- a/src/purchasing-mcp/appsettings.Development.json
+++ b/src/purchasing-mcp/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultDatabase": "Data Source=integrationsonline.westeurope.cloudapp.azure.com;Initial Catalog=PurchasingDB;Persist Security Info=True;User ID=devuser;Password='devuser';TrustServerCertificate=true"
+    "DefaultDatabase": "Data Source=localhost;Initial Catalog=PurchasingDB;Persist Security Info=True;User ID=devuser;Password='devuser';TrustServerCertificate=true"
   },
   "OfferRandomizer": {
     "TransportationCost": 30.00,
