--- a/src/purchasing-mcp/appsettings.Development.json
+++ b/src/purchasing-mcp/appsettings.Development.json
@@ -37,15 +37,15 @@
       "AdditionalDaysRange": 4
     },
     "BasePrices": {
-      "Butter Chicken": 6.50,
-      "Blini with Salmon": 9.50,
       "Wiener Schnitzel": 14.00,
-      "Curry Wurst": 5.00,
-      "Falafel": 4.00,
+      "Germknoedel": 7.00,
+      "Kaiserschmarrn": 8.00,
+      "Weisswurst mit Brezn": 10.00,
+      "Schweinshaxe mit Kraut": 15.00,
       "Pizza Napoli": 9.00,
-      "Greek Salad": 5.00,
+      "Arancini Napoletana": 6.00,
       "Pad Ka Prao": 5.00,
-      "Spare Ribs": 12.00
+      "Green Curry": 7.00
     }
   },
   "Graph": {
