Add email functionality and configuration for offer and order confirmations
- Introduced EmailOptions class to manage email prompt file configurations.
- Updated appsettings.json to include Email section with OfferPromptyFile and OrderPromptyFile settings.
- Modified EmailResponseHandler to accept EmailOptions for generating email bodies.
- Enhanced InquiryService to utilize EmailOptions when sending offer emails.
- Updated PurchasingTools to send order confirmation emails using EmailOptions.
- Added OfferEmailGeneration.prompty and OrderEmailGeneration.prompty files for email content generation.
- Configured dependency injection for EmailOptions in relevant services.

--- a/src/purchasing-mcp/appsettings.json
+++ b/src/purchasing-mcp/appsettings.json
@@ -48,5 +48,9 @@
     "Model": "gpt-4.1",
     "Endpoint": "https://ai-agentssdkhub549657792775.services.ai.azure.com",
     "ApiKey": "<API_KEY>"
+  },
+  "Email": {
+    "OfferPromptyFile": "OfferEmailGeneration.prompty",
+    "OrderPromptyFile": "OrderEmailGeneration.prompty"
   }
 }
